k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eclaims
  labels:
    app.kubernetes.io/managed-by: argocd
    team: eclaims
    istio-injection: "enabled"
